--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=600&h=400&fit=crop" alt="在筆電前撰寫程式碼的前端開發者工作環境" loading="lazy" >
                     <div class="caption">這是第3張圖的補充說明，滑鼠移開後會自動隱藏。</div>
               </div>  
-          </div>2
+          </div>
 
           <p class="about-text">"Hi, my name is FAN, I come from Taiwan, 3 years with the company, nice to see you all"這或許是過去三年在中東的空中非仔生涯，我在briefing room裡最常說的話。很開心自己有這個機會可以去接觸到很多不同的文化，在這之前我當過業務，也當過NIKE店員，以往都是面對人比較多，現在想利用休息的這段時間嘗試Vibe Coding，之後會在去其他bootcamp上實體課，希望明年可以轉職成為"產品經理"。</p>
           <p class="about-text">💡 之後會用另一個 Prompt 產生正式內容，請把新的 section 程式碼整段貼回來，取代這兩個註解之間的內容。</p> 
